TST/x64/Debug/TST.log
  main.cpp
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(92): error : expected an identifier
            !_Is_implicitly_default_constructible<_Uty1>::value || !_Is_implicitly_default_constructible<_Uty2>::value)
            ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(91): error : not a valid member class or function template declaration
        constexpr explicit(
        ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(91): error : "explicit" is not allowed
        constexpr explicit(
        ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(93): error : expected a ";"
            pair() noexcept(
            ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(175): error : expected an identifier
        constexpr explicit(!is_convertible<const _Other1&, _Ty1>::value // TRANSITION, VSO#946746
                           ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(175): error : not a valid member class or function template declaration
        constexpr explicit(!is_convertible<const _Other1&, _Ty1>::value // TRANSITION, VSO#946746
        ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(175): error : "explicit" is not allowed
        constexpr explicit(!is_convertible<const _Other1&, _Ty1>::value // TRANSITION, VSO#946746
        ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(177): error : expected a ";"
            pair(const pair<_Other1, _Other2>& _Right) noexcept(is_nothrow_constructible_v<_Ty1, const _Other1&>&&
            ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(263): error : expected an identifier
            !conjunction_v<_Is_implicitly_default_constructible<_This2>, _Is_implicitly_default_constructible<_Rest>...>)
            ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(263): error : expected a ")"
            !conjunction_v<_Is_implicitly_default_constructible<_This2>, _Is_implicitly_default_constructible<_Rest>...>)
                                                                       ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(262): error : not a valid member class or function template declaration
        constexpr explicit(
        ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(262): error : "explicit" is not allowed
        constexpr explicit(
        ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(263): error : expected a ";"
            !conjunction_v<_Is_implicitly_default_constructible<_This2>, _Is_implicitly_default_constructible<_Rest>...>)
                                                                       ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(341): error : member "std::tuple<_This, _Rest...>::_Tuple_conditional_explicit_v" is not a valid class member template
        constexpr explicit(_Tuple_conditional_explicit_v<tuple, const _Other&...>)
                           ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(341): error : "explicit" is not allowed
        constexpr explicit(_Tuple_conditional_explicit_v<tuple, const _Other&...>)
        ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(342): error : expected a ";"
            tuple(const tuple<_Other...>& _Right) noexcept(
            ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\tuple(973): error : no instance of overloaded function "std::pair<_Ty1, _Ty2>::pair" matches the specified type
    pair<_Ty1, _Ty2>::pair(_Tuple1& _Val1, _Tuple2& _Val2, index_sequence<_Indexes1...>, index_sequence<_Indexes2...>)
                      ^
  
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\algorithm(3418): error : no instance of constructor "std::pair<_Ty1, _Ty2>::pair [with _Ty1=double *, _Ty2=double *]" matches the argument list
              argument types are: (double *, double *)
                return pair<_RanIt, _RanIt>(_Pfirst, _Plast);
                       ^
  C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(84): note: this candidate was rejected because mismatch in count of arguments
    struct pair { // store a pair of values
           ^
  C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(230): note: this candidate was rejected because mismatch in count of arguments
        pair(piecewise_construct_t, tuple<_Types1...> _Val1, tuple<_Types2...> _Val2);
        ^
  C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.24.28314\include\utility(169): note: this candidate was rejected because mismatch in count of arguments
        pair(pair&&)      = default;
        ^
            detected during:
              instantiation of "std::pair<_RanIt, _RanIt> std::_Partition_by_median_guess_unchecked(_RanIt, _RanIt, _Pr) [with _RanIt=double *, _Pr=std::less<void>]" at line 3448
              instantiation of "void std::_Sort_unchecked(_RanIt, _RanIt, std::_Iter_diff_t<_RanIt>, _Pr) [with _RanIt=double *, _Pr=std::less<void>]" at line 3474
              instantiation of "void std::sort(_RanIt, _RanIt, _Pr) [with _RanIt=double *, _Pr=std::less<void>]" at line 3479
              instantiation of "void std::sort(_RanIt, _RanIt) [with _RanIt=double *]" at line 32 of "main.cpp"
  
  compilation aborted for main.cpp (code 2)
